--- a/notebooks/transformer.ipynb
+++ b/notebooks/transformer.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/lauro/.virtualenvs/meta-models/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from meta_transformer import transformer\n",
     "import jax\n",
@@ -29,6 +20,7 @@
     "import time\n",
     "from functools import partial\n",
     "import datasets\n",
+    "import dm_pix as pix\n",
     "\n",
     "\n",
     "rng = random.PRNGKey(42)\n",
@@ -61,6 +53,129 @@
     "def normalize(x):\n",
     "    # return (x - jnp.mean(x)) / jnp.std(x)\n",
     "    return (x - 120) / 64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data(dataset: str = \"mnist\"):\n",
+    "    dataset = datasets.load_dataset(dataset)\n",
+    "    dataset = dataset.with_format(\"jax\")\n",
+    "    try:\n",
+    "        dataset = dataset.rename_column(\"image\", \"img\")\n",
+    "    except ValueError:\n",
+    "        pass\n",
+    "    return dataset[\"train\"], dataset[\"test\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Found cached dataset cifar10 (/home/lauro/.cache/huggingface/datasets/cifar10/plain_text/1.0.0/447d6ec4733dddd1ce3bb577c7166b986eaa4c538dcd9e805ba61f35674a9de4)\n",
+      "100%|██████████| 2/2 [00:00<00:00, 948.83it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['img', 'label'],\n",
+       "    num_rows: 50000\n",
+       "})"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data, test_data = load_data(\"cifar10\")\n",
+    "train_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def augment_datapoint(datapoint: dict, augmentations: list = []):\n",
+    "    \"\"\"Input: single datapoint (image and label), list of augmentations (functions)\n",
+    "    Output: batch of augmented datapoints (images and labels), including original datapoint\"\"\"\n",
+    "    augmentations += [lambda x: x]\n",
+    "    return [dict(img=aug(datapoint[\"img\"]), label=datapoint[\"label\"]) for aug in augmentations]\n",
+    "\n",
+    "\n",
+    "def augment_batch(batch: list, augmentations: list = []):\n",
+    "    \"\"\"Input: batch of datapoints (images and labels), list of augmentations (functions)\n",
+    "    Output: batch of augmented datapoints (images and labels), including original datapoints\"\"\"\n",
+    "    return vmap(augment_datapoint, in_axes=(0, None))(batch, augmentations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32, 32, 3)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rngkey = random.PRNGKey(420)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "random_brightness() missing 1 required positional argument: 'max_delta'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[123], line 6\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39m#img = pix.flip_left_right(img)\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m#img = pix.flip_up_down(img)\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39m#img = pix.rotate(img, 45)\u001b[39;00m\n\u001b[1;32m      5\u001b[0m subkey, rngkey \u001b[39m=\u001b[39m random\u001b[39m.\u001b[39msplit(rngkey)\n\u001b[0;32m----> 6\u001b[0m img \u001b[39m=\u001b[39m pix\u001b[39m.\u001b[39;49mrandom_brightness(rngkey, img)\n\u001b[1;32m      7\u001b[0m plt\u001b[39m.\u001b[39mimshow(img)\n",
+      "\u001b[0;31mTypeError\u001b[0m: random_brightness() missing 1 required positional argument: 'max_delta'"
+     ]
+    }
+   ],
+   "source": [
+    "img = train_data[0][\"img\"]\n",
+    "#img = pix.flip_left_right(img)\n",
+    "#img = pix.flip_up_down(img)\n",
+    "#img = pix.rotate(img, 45)\n",
+    "subkey, rngkey = random.split(rngkey)\n",
+    "img = pix.random_brightness(rngkey, img)\n",
+    "plt.imshow(img)"
    ]
   },
   {
