refactor train state into its dataclass TrainState

--- a/notebooks/transformer.ipynb
+++ b/notebooks/transformer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "Found cached dataset cifar10 (/home/lauro/.cache/huggingface/datasets/cifar10/plain_text/1.0.0/447d6ec4733dddd1ce3bb577c7166b986eaa4c538dcd9e805ba61f35674a9de4)\n",
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2/2 [00:00<00:00, 454.69it/s]\n"
+      "100%|████████████████████████████████████████████| 2/2 [00:00<00:00, 419.64it/s]\n"
      ]
     }
    ],
@@ -29,12 +29,14 @@
     "import functools\n",
     "import datasets\n",
     "import dataclasses\n",
-    "from typing import Mapping, Any\n",
+    "from typing import Mapping, Any, Tuple, List\n",
+    "import chex\n",
     "\n",
     "\n",
     "rng = random.PRNGKey(42)\n",
     "\n",
     "\n",
+    "# Model\n",
     "def forward(input_chunks, is_training=True):\n",
     "    t = transformer.Classifier(\n",
     "        transformer=transformer.Transformer(\n",
@@ -58,17 +60,12 @@
     "    input_chunks, targets = data[\"img\"], data[\"label\"]\n",
     "    targets = nn.one_hot(targets, 10)\n",
     "    logits = model.apply(params, rng, input_chunks, is_training)[:, 0, :]  # [B, C]\n",
-    "    assert logits.shape == targets.shape\n",
+    "    chex.assert_equal_shape(logits, targets)\n",
     "    return -jnp.sum(targets * nn.log_softmax(logits, axis=-1), axis=-1).mean()\n",
     "\n",
     "\n",
+    "# Data and metrics\n",
     "train_data, test_data = utils.load_data(\"cifar10\")\n",
-    "train_data\n",
-    "\n",
-    "# Optimizer and update function\n",
-    "LEARNING_RATE = 1e-3\n",
-    "WEIGHT_DECAY = 1e-3\n",
-    "opt = optax.adamw(LEARNING_RATE, weight_decay=WEIGHT_DECAY)\n",
     "\n",
     "\n",
     "@functools.partial(jit, static_argnums=3)\n",
@@ -82,7 +79,7 @@
     "\n",
     "@jit\n",
     "def val_metrics(rng, params):\n",
-    "    \"\"\"Compute accuracy on test set.\"\"\"\n",
+    "    \"\"\"Compute acc and loss on test set.\"\"\"\n",
     "    rngs = random.split(rng, 3)\n",
     "    tdata = test_data[:]\n",
     "    tdata[\"img\"] = utils.process_batch(rngs[0], tdata[\"img\"], augment=False)\n",
@@ -93,84 +90,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "BATCH_SIZE = 32\n",
+    "# Optimizer and update function\n",
+    "LEARNING_RATE = 1e-3\n",
+    "WEIGHT_DECAY = 1e-3\n",
+    "BATCH_SIZE = 512\n",
+    "opt = optax.adamw(LEARNING_RATE, weight_decay=WEIGHT_DECAY)\n",
     "\n",
-    "class Updater:\n",
-    "    \"\"\"Class to keep track of training state. All methods are jittable.\"\"\"\n",
+    "\n",
+    "@chex.dataclass\n",
+    "class TrainState:\n",
+    "    step: int\n",
+    "    rng: random.PRNGKey\n",
+    "    opt_state: optax.OptState\n",
+    "    params: dict\n",
+    "\n",
+    "\n",
+    "class Updater: # Could also make this a function of opt.update, loss_fn, model.apply, etc if we want to be flexible\n",
+    "    \"\"\"Holds training methods. All methods are jittable.\"\"\"\n",
     "    @functools.partial(jit, static_argnums=0)\n",
     "    def init_params(self, rng: jnp.ndarray, data: dict) -> dict:\n",
     "        \"\"\"Initializes state of the updater.\"\"\"\n",
     "        out_rng, k0, k1 = jax.random.split(rng, 3)\n",
     "        params = model.init(k1, utils.process_batch(k0, data[\"img\"]))\n",
     "        opt_state = opt.init(params)\n",
-    "#        print(\"Number of parameters:\", sum([x.size for x in jax.tree_util.tree_leaves(params)]) / 1e6, \"Million\")\n",
-    "        state = dict(\n",
+    "        return TrainState(\n",
     "            step=0,\n",
     "            rng=out_rng,\n",
     "            opt_state=opt_state,\n",
     "            params=params,\n",
     "        )\n",
-    "        return state\n",
     "    \n",
     "    @functools.partial(jit, static_argnums=0)\n",
-    "    def update(self, state: dict, data: dict) -> dict:\n",
-    "        rng, *subkeys = jax.random.split(state['rng'], 5)\n",
+    "    def update(self, state: TrainState, data: dict) -> TrainState:\n",
+    "        state.rng, *subkeys = jax.random.split(state.rng, 3)\n",
     "        data[\"img\"] = utils.process_batch(subkeys[0], data[\"img\"])\n",
-    "        l, grads = value_and_grad(loss)(state[\"params\"], rng, data)\n",
-    "        train_acc = accuracy(subkeys[1], state[\"params\"], data)\n",
-    "        updates, opt_state = opt.update(grads, state[\"opt_state\"], state[\"params\"])\n",
-    "        params = optax.apply_updates(state[\"params\"], updates)\n",
+    "        grads = grad(loss)(state.params, subkeys[1], data)       \n",
+    "        updates, state.opt_state = opt.update(grads, state.opt_state, state.params)\n",
+    "        state.params = optax.apply_updates(state.params, updates)\n",
+    "        state.step += 1\n",
+    "        return state\n",
     "\n",
-    "        new_state = dict(\n",
-    "            step=state[\"step\"] + 1,\n",
-    "            rng=rng,\n",
-    "            opt_state=opt_state,\n",
-    "            params=params,\n",
-    "        )\n",
-    "\n",
-    "        metrics = {\n",
-    "            \"train/loss\": l,\n",
-    "            \"train/acc\": train_acc,\n",
-    "            **val_metrics(subkeys[2], params)\n",
-    "        }\n",
-    "        return new_state, metrics"
+    "    @functools.partial(jit, static_argnums=0)\n",
+    "    def compute_validation_metrics(self, state: TrainState) -> Tuple[TrainState, dict]:\n",
+    "        state.rng, subkey = random.split(state.rng)\n",
+    "        return state, val_metrics(subkey, state.params)\n",
+    "    \n",
+    "    @functools.partial(jit, static_argnums=0)\n",
+    "    def compute_metrics(self, state: TrainState, data: dict) -> Tuple[TrainState, dict]:\n",
+    "        state.rng, *subkeys = random.split(state.rng, 4)\n",
+    "        data[\"img\"] = utils.process_batch(subkeys[0], data[\"img\"])\n",
+    "        train_acc = accuracy(subkeys[1], state.params, data)\n",
+    "        train_loss = loss(state.params, subkeys[2], data)\n",
+    "        state, val_metrics = self.compute_validation_metrics(state)\n",
+    "        return state, {\"train/acc\": train_acc, **val_metrics}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "updater = Updater()\n",
-    "state = updater.init_params(rng, train_data[:2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m batch \u001b[38;5;129;01min\u001b[39;00m train_data\u001b[38;5;241m.\u001b[39miter(batch_size\u001b[38;5;241m=\u001b[39mBATCH_SIZE):\n\u001b[0;32m----> 2\u001b[0m     state, metrics \u001b[38;5;241m=\u001b[39m \u001b[43mupdater\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mupdate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstate\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m<string>:1\u001b[0m, in \u001b[0;36m__new__\u001b[0;34m(_cls, count, mu, nu)\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of parameters: 0.320586 Million\n"
      ]
     }
    ],
    "source": [
+    "updater = Updater()\n",
+    "state = updater.init_params(rng, train_data[:2])\n",
+    "print(\"Number of parameters:\", sum([x.size for x in jax.tree_util.tree_leaves(state.params)]) / 1e6, \"Million\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics_list = []\n",
     "for batch in train_data.iter(batch_size=BATCH_SIZE):\n",
-    "    state, metrics = updater.update(state, batch)"
+    "    if state.step % 100 == 0:\n",
+    "        state, metrics = updater.compute_metrics(state, batch)\n",
+    "        metrics_list.append(metrics)\n",
+    "    state = updater.update(state, batch)"
    ]
   },
   {
@@ -179,6 +188,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "metrics = utils.dict_concatenate(metrics_list)\n",
+    "\n",
     "print(\"Final training accuracy:\", metrics[\"train/acc\"][-1])\n",
     "print(\"Final test accuracy:\", metrics[\"val/acc\"][-1])"
    ]
@@ -223,13 +234,6 @@
     "fig.tight_layout()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
