reorganize model code into separate scripts for ViT and meta-model.

--- a/notebooks/embed_net.ipynb
+++ b/notebooks/embed_net.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,28 +57,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lauro/.virtualenvs/meta-models/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import dataclasses\n",
     "from meta_transformer import utils\n",
     "from jax import vmap\n",
-    "from meta_transformer.transformer import Transformer"
+    "from meta_transformer.transformer import Transformer\n",
+    "from meta_transformer.meta_model import MetaModelClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "net = hk.without_apply_rng(hk.transform(ctc_net_fn))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -92,12 +93,13 @@
        " 'linear_2': {'b': (10,), 'w': (128, 10)}}"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "net = hk.without_apply_rng(hk.transform(ctc_net_fn))\n",
     "key, subkey = random.split(key)\n",
     "params = net.init(subkey, jnp.ones((1, 32, 32, 1)), 10)\n",
     "jax.tree_util.tree_map(lambda x: x.shape, params)"
@@ -105,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +121,7 @@
        " 'linear_2': {'b': 10, 'w': 1280}}"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +141,7 @@
        "4.23105"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,78 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def chunk_weights(weights: jnp.ndarray, chunk_size: int) -> jnp.ndarray:\n",
-    "    flat_weights = weights.flatten()\n",
-    "    flat_weights = utils.pad_to_chunk_size(flat_weights, chunk_size)\n",
-    "    weight_chunks = jnp.split(flat_weights, len(flat_weights) // chunk_size)\n",
-    "    return jnp.array(weight_chunks)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@dataclasses.dataclass\n",
-    "class WeightEmbedding(hk.Module):\n",
-    "    \"\"\"A module that embeds an array of neural network weights\"\"\"\n",
-    "    chunk_size: int\n",
-    "    embed_dim: int\n",
-    "\n",
-    "    def __call__(\n",
-    "        self,\n",
-    "        weights: jax.Array,\n",
-    "    ) -> jax.Array:  # [B, T, D]\n",
-    "        embed = hk.Linear(self.embed_dim)\n",
-    "        weight_chunks = hk.vmap(chunk_weights, (0, None))(weights, self.chunk_size)  # [B, T, D]\n",
-    "        embeddings = embed(weight_chunks)\n",
-    "        return embeddings\n",
-    "\n",
-    "\n",
-    "@dataclasses.dataclass\n",
-    "class NetEmbedding(hk.Module):\n",
-    "    \"\"\"A module that creates embedding vectors from neural network params.\"\"\"\n",
-    "    embed_dim: int\n",
-    "\n",
-    "    def __call__(\n",
-    "            self,\n",
-    "            params: dict,\n",
-    "    ) -> jax.Array:\n",
-    "        conv_embed = WeightEmbedding(chunk_size=256, embed_dim=self.embed_dim)\n",
-    "        linear_embed = WeightEmbedding(chunk_size=1024, embed_dim=self.embed_dim)\n",
-    "        bias_embed = WeightEmbedding(chunk_size=16, embed_dim=self.embed_dim)\n",
-    "\n",
-    "        params_dict = {f\"{k}/{subk}\": subv for k, v in params.items() \n",
-    "                    for subk, subv in v.items()}\n",
-    "\n",
-    "        embeddings = []\n",
-    "        for k, v in params_dict.items():\n",
-    "            if k.endswith('b'):\n",
-    "                embeddings.append(bias_embed(v))\n",
-    "            else:\n",
-    "                embeddings.append(conv_embed(v) if 'conv' in k else linear_embed(v))\n",
-    "        return jnp.concatenate(embeddings, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def tree_stack(trees):\n",
-    "    \"\"\"Stacks a list of trees into a single tree with an extra dimension.\"\"\"\n",
-    "    return jax.tree_map(lambda *x: jnp.stack(x), *trees)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -235,139 +166,24 @@
        " 'linear_2': {'b': (2, 10), 'w': (2, 128, 10)}}"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stacked = tree_stack([params, params])\n",
+    "stacked = utils.tree_stack([params, params])\n",
     "jax.tree_map(lambda x: x.shape, stacked)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test_fn(params: dict):\n",
-    "    net_embedding = NetEmbedding(embed_dim=32)\n",
-    "    return net_embedding(params)\n",
-    "\n",
-    "test = hk.without_apply_rng(hk.transform(test_fn))\n",
-    "key, subkey = random.split(key)\n",
-    "meta_params = test.init(subkey, stacked)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.041568"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "utils.count_params(meta_params) / 1e6"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "embed = jax.jit(functools.partial(test.apply, meta_params))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2, 4211, 32)"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "param_embeds = embed(stacked)\n",
-    "param_embeds.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import Optional"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@dataclasses.dataclass\n",
-    "class Classifier(hk.Module):\n",
-    "  \"\"\"A ViT-style classifier.\"\"\"\n",
-    "\n",
-    "  transformer: Transformer\n",
-    "  model_size: int\n",
-    "  num_classes: int\n",
-    "  name: Optional[str] = None\n",
-    "  chunk_size: Optional[int] = 4\n",
-    "\n",
-    "  def __call__(\n",
-    "      self,\n",
-    "      params: dict,\n",
-    "      *,\n",
-    "      is_training: bool = True,\n",
-    "  ) -> jax.Array:\n",
-    "    \"\"\"Forward pass. Returns a sequence of logits.\"\"\"\n",
-    "    net_embed = NetEmbedding(embed_dim=self.model_size)\n",
-    "    embeddings = net_embed(params)  # [B, T, D]\n",
-    "    _, seq_len, _ = embeddings.shape\n",
-    "\n",
-    "    # Embed the patches and positions.\n",
-    "    positional_embeddings = hk.get_parameter(\n",
-    "        'positional_embeddings', [seq_len, self.model_size], init=jnp.zeros)\n",
-    "    input_embeddings = embeddings + positional_embeddings  # [B, T, D]\n",
-    "\n",
-    "    # Run the transformer over the inputs.\n",
-    "    embeddings = self.transformer(\n",
-    "        input_embeddings,\n",
-    "        is_training=is_training,\n",
-    "    )  # [B, T, D]\n",
-    "\n",
-    "    return hk.Linear(self.num_classes)(embeddings)  # [B, T, V]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def model_fn(params: dict):\n",
-    "    net = Classifier(\n",
+    "    net = MetaModelClassifier(\n",
     "        model_size=4*32, \n",
     "        num_classes=10, \n",
     "        transformer=Transformer(\n",
@@ -390,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +215,7 @@
        "(2, 4211, 10)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
